--- a/08-improve-unit-testability-of-higher-order-components/index.html
+++ b/08-improve-unit-testability-of-higher-order-components/index.html
@@ -81,37 +81,27 @@ by Mauricio Allende (https://mallendeo.com/)
 
 <script type="text/babel">
 const TOGGLE_CONTEXT = '__toggle__'
-const ToggleOn = withToggle(
-  ({children, toggle}) => {
-    const {on} = toggle
-    return on ? children : null
-  },
-)
-const ToggleOff = withToggle(
-  ({children, toggle}) => {
-    const {on} = toggle
-    return on ? null : children
-  },
-)
-const ToggleButton = withToggle(
-  ({toggle, ...props}) => {
-    return (
-      <Switch
-        on={toggle.on}
-        onClick={toggle.toggle}
-        {...props}
-      />
-    )
-  },
-)
+const ToggleOn = ({children, toggle: {on}}) => {
+  return on ? children : null
+}
+const ToggleOff = ({children, toggle: {on}}) => {
+  return on ? null : children
+}
+const ToggleButton = ({
+  toggle: {on, toggle},
+  ...props
+}) => {
+  return (
+    <Switch on={on} onClick={toggle} {...props} />
+  )
+}
 class Toggle extends React.Component {
-  static On = ToggleOn
-  static Off = ToggleOff
-  static Button = ToggleButton
+  static On = withToggle(ToggleOn)
+  static Off = withToggle(ToggleOff)
+  static Button = withToggle(ToggleButton)
   static defaultProps = {onToggle: () => {}}
   static childContextTypes = {
-    [TOGGLE_CONTEXT]:
-      PropTypes.object.isRequired,
+    [TOGGLE_CONTEXT]: PropTypes.object.isRequired,
   }
 
   state = {on: false}
@@ -134,61 +124,46 @@ class Toggle extends React.Component {
 }
 
 function withToggle(Component) {
-  function Wrapper(props, context) {
+  function Wrapper(
+    {innerRef, ...props},
+    context,
+  ) {
     const toggleContext = context[TOGGLE_CONTEXT]
-    const {innerRef, ...remainingProps} = props
     return (
       <Component
-        {...remainingProps}
-        toggle={toggleContext}
+        {...props}
         ref={innerRef}
+        toggle={toggleContext}
       />
     )
   }
-
   Wrapper.contextTypes = {
-    [TOGGLE_CONTEXT]:
-      PropTypes.object.isRequired,
+    [TOGGLE_CONTEXT]: PropTypes.object.isRequired,
   }
   Wrapper.displayName = `withToggle(${Component.displayName ||
     Component.name})`
-  Wrapper.propTypes = {innerRef: PropTypes.func}
   Wrapper.WrappedComponent = Component
-
   return Wrapper
 }
 
-class ToggleInfo extends React.Component {
-  render() {
-    const {toggle} = this.props
-    return (
-      <div>
-        The button is {toggle.on ? 'on' : 'off'}.
-        But you can change that state by clicking
-        the switch or clicking this button:{' '}
-        <button onClick={toggle.toggle}>
-          Toggle
-        </button>
-      </div>
-    )
-  }
-}
-
-const WrappedToggleInfo = withToggle(ToggleInfo)
+const MyToggle = ({toggle: {on, toggle}}) => (
+  <button onClick={toggle}>
+    {on ? 'on' : 'off'}
+  </button>
+)
+const MyToggleWrapper = withToggle(MyToggle)
 
 function test() {
   const div = document.createElement('div')
   document.body.appendChild(div)
   const toggle = () => (toggle.called = true)
   ReactDOM.render(
-    <WrappedToggleInfo.WrappedComponent
+    <MyToggleWrapper.WrappedComponent
       toggle={{on: true, toggle}}
     />,
     div,
   )
-  if (
-    !div.innerHTML.includes('The button is on')
-  ) {
+  if (!div.innerHTML.includes('on')) {
     throw new Error(
       `Contents are wrong: ${div.innerHTML}`,
     )
@@ -211,11 +186,9 @@ function App() {
     >
       <Toggle.On>The button is on</Toggle.On>
       <Toggle.Off>The button is off</Toggle.Off>
-      <div>
-        <Toggle.Button />
-      </div>
+      <Toggle.Button />
       <hr />
-      <WrappedToggleInfo />
+      <MyToggleWrapper />
     </Toggle>
   )
 }
