--- a/09-handle-statics-properly-with-higher-order-components/index.html
+++ b/09-handle-statics-properly-with-higher-order-components/index.html
@@ -82,37 +82,27 @@ by Mauricio Allende (https://mallendeo.com/)
 
 <script type="text/babel">
 const TOGGLE_CONTEXT = '__toggle__'
-const ToggleOn = withToggle(
-  ({children, toggle}) => {
-    const {on} = toggle
-    return on ? children : null
-  },
-)
-const ToggleOff = withToggle(
-  ({children, toggle}) => {
-    const {on} = toggle
-    return on ? null : children
-  },
-)
-const ToggleButton = withToggle(
-  ({toggle, ...props}) => {
-    return (
-      <Switch
-        on={toggle.on}
-        onClick={toggle.toggle}
-        {...props}
-      />
-    )
-  },
-)
+const ToggleOn = ({children, toggle: {on}}) => {
+  return on ? children : null
+}
+const ToggleOff = ({children, toggle: {on}}) => {
+  return on ? null : children
+}
+const ToggleButton = ({
+  toggle: {on, toggle},
+  ...props
+}) => {
+  return (
+    <Switch on={on} onClick={toggle} {...props} />
+  )
+}
 class Toggle extends React.Component {
-  static On = ToggleOn
-  static Off = ToggleOff
-  static Button = ToggleButton
+  static On = withToggle(ToggleOn)
+  static Off = withToggle(ToggleOff)
+  static Button = withToggle(ToggleButton)
   static defaultProps = {onToggle: () => {}}
   static childContextTypes = {
-    [TOGGLE_CONTEXT]:
-      PropTypes.object.isRequired,
+    [TOGGLE_CONTEXT]: PropTypes.object.isRequired,
   }
 
   state = {on: false}
@@ -134,81 +124,48 @@ class Toggle extends React.Component {
   }
 }
 
-function setMergeableContextTypes(
-  Component,
-  defaultContextTypes,
-) {
-  let userDefinedContextTypes = null
-
-  Object.defineProperty(
-    Component,
-    'contextTypes',
-    {
-      enumerable: true,
-      configurable: true,
-      set(value) {
-        userDefinedContextTypes = value
-      },
-      get() {
-        if (userDefinedContextTypes) {
-          return {
-            ...defaultContextTypes,
-            ...userDefinedContextTypes,
-          }
-        }
-        return defaultContextTypes
-      },
-    },
-  )
-}
-
 function withToggle(Component) {
-  function Wrapper(props, context) {
+  function Wrapper(
+    {innerRef, ...props},
+    context,
+  ) {
     const toggleContext = context[TOGGLE_CONTEXT]
-    const {innerRef, ...remainingProps} = props
     return (
       <Component
-        {...remainingProps}
-        toggle={toggleContext}
+        {...props}
         ref={innerRef}
+        toggle={toggleContext}
       />
     )
   }
-
-  setMergeableContextTypes(Wrapper, {
-    [TOGGLE_CONTEXT]:
-      PropTypes.object.isRequired,
-  })
-
+  Wrapper.contextTypes = {
+    [TOGGLE_CONTEXT]: PropTypes.object.isRequired,
+  }
   Wrapper.displayName = `withToggle(${Component.displayName ||
     Component.name})`
-  Wrapper.propTypes = {innerRef: PropTypes.func}
   Wrapper.WrappedComponent = Component
 
   return hoistNonReactStatics(Wrapper, Component)
 }
 
-class ToggleInfo extends React.Component {
-  static ExtraInfo = withToggle(({toggle}) => (
-    <div>
-      The button is {toggle.on ? 'on' : 'off'}.
-    </div>
-  ))
+class MyToggle extends React.Component {
+  static ToggleMessage = withToggle(
+    ({toggle: {on}}) =>
+      on
+        ? 'Warning: The button is toggled on'
+        : null,
+  )
   render() {
-    const {toggle} = this.props
+    const {toggle: {on, toggle}} = this.props
     return (
-      <div>
-        But you can change that state by clicking
-        the switch or clicking this button:{' '}
-        <button onClick={toggle.toggle}>
-          Toggle
-        </button>
-      </div>
+      <button onClick={toggle}>
+        {on ? 'on' : 'off'}
+      </button>
     )
   }
 }
 
-const WrappedToggleInfo = withToggle(ToggleInfo)
+const MyToggleWrapper = withToggle(MyToggle)
 
 function App() {
   return (
@@ -217,12 +174,11 @@ function App() {
     >
       <Toggle.On>The button is on</Toggle.On>
       <Toggle.Off>The button is off</Toggle.Off>
-      <div>
-        <Toggle.Button />
-      </div>
+      <Toggle.Button />
       <hr />
-      <WrappedToggleInfo.ExtraInfo />
-      <WrappedToggleInfo />
+      <MyToggleWrapper />
+      <hr />
+      <MyToggleWrapper.ToggleMessage />
     </Toggle>
   )
 }
