--- a/16-implement-a-higher-order-component-with-render-props/index.html
+++ b/16-implement-a-higher-order-component-with-render-props/index.html
@@ -76,6 +76,7 @@ by Mauricio Allende (https://mallendeo.com/)
 <script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.development.js"></script>
 <script src="https://unpkg.com/prop-types@15.6.0/prop-types.js"></script>
 <script src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
+<script src="https://cdn.rawgit.com/kentcdodds/ea2fdfc82f79228a6be641c78dc0e1b9/raw/0f792eb8dfb3bf993bdf50c9656f12090ed344e6/hoist-non-react-statics.umd.js"></script>
 
 <div id="⚛️"></div>
 
@@ -91,26 +92,41 @@ class Toggle extends React.Component {
   }
   initialState = {on: this.props.defaultOn}
   state = this.initialState
-  reset = () =>
-    this.setState(this.initialState, () =>
-      this.props.onReset(this.state.on),
-    )
-  toggle = () =>
-    this.setState(
-      ({on}) => ({on: !on}),
-      () => this.props.onToggle(this.state.on),
-    )
-  getTogglerProps = ({
-    onClick,
-    ...remainingProps
-  }) => ({
+  reset = () => {
+    if (this.isOnControlled()) {
+      this.props.onReset()
+    } else {
+      this.setState(this.initialState, () =>
+        this.props.onReset(this.state.on),
+      )
+    }
+  }
+  toggle = () => {
+    if (this.isOnControlled()) {
+      this.props.onToggle()
+    } else {
+      this.setState(
+        ({on}) => ({on: !on}),
+        () => this.props.onToggle(this.state.on),
+      )
+    }
+  }
+
+  getTogglerProps = (
+    {onClick, ...props} = {},
+  ) => ({
     onClick: compose(onClick, this.toggle),
     'aria-expanded': this.state.on,
-    ...remainingProps,
+    ...props,
   })
+  isOnControlled() {
+    return this.props.on !== undefined
+  }
   render() {
     return this.props.render({
-      on: this.state.on,
+      on: this.isOnControlled()
+        ? this.props.on
+        : this.state.on,
       getTogglerProps: this.getTogglerProps,
       toggle: this.toggle,
       reset: this.reset,
@@ -118,20 +134,99 @@ class Toggle extends React.Component {
   }
 }
 
+class ToggleProvider extends React.Component {
+  static contextName = '__toggle__'
+  static Renderer = class extends React.Component {
+    static childContextTypes = {
+      [ToggleProvider.contextName]:
+        PropTypes.object.isRequired,
+    }
+    getChildContext() {
+      return {
+        [ToggleProvider.contextName]: this.props
+          .toggle,
+      }
+    }
+    render() {
+      return this.props.children
+    }
+  }
+  render() {
+    const {
+      children,
+      ...remainingProps
+    } = this.props
+    return (
+      <Toggle
+        {...remainingProps}
+        render={toggle => (
+          <ToggleProvider.Renderer
+            toggle={toggle}
+            children={children}
+          />
+        )}
+      />
+    )
+  }
+}
+
+function ToggleController(props, context) {
+  return props.render(
+    context[ToggleProvider.contextName],
+  )
+}
+ToggleController.contextTypes = {
+  [ToggleProvider.contextName]:
+    PropTypes.object.isRequired,
+}
+
+function withToggle(Component) {
+  function Wrapper(props, context) {
+    const {innerRef, ...remainingProps} = props
+    return (
+      <ToggleController
+        render={toggle => (
+          <Component
+            {...remainingProps}
+            toggle={toggle}
+            ref={innerRef}
+          />
+        )}
+      />
+    )
+  }
+
+  Wrapper.displayName = `withToggle(${Component.displayName ||
+    Component.name})`
+  Wrapper.propTypes = {innerRef: PropTypes.func}
+  Wrapper.WrappedComponent = Component
+
+  return hoistNonReactStatics(Wrapper, Component)
+}
+
+const ShowMore = withToggle(
+  ({number, toggle}) => (
+    <div>
+      Switch {number}
+      <Switch
+        {...toggle.getTogglerProps({
+          on: toggle.on,
+        })}
+      />
+      {toggle.on ? (
+        <ToggleProvider>
+          <ShowMore number={number + 1} />
+        </ToggleProvider>
+      ) : null}
+    </div>
+  ),
+)
+
 function App() {
   return (
-    <Toggle
-      defaultOn={true}
-      onToggle={on => console.log('toggle', on)}
-      onReset={on => console.log('reset', on)}
-      render={toggle => (
-        <Switch
-          {...toggle.getTogglerProps({
-            on: toggle.on,
-          })}
-        />
-      )}
-    />
+    <ToggleProvider defaultOn={true}>
+      <ShowMore number={0} />
+    </ToggleProvider>
   )
 }
 
