--- a/12-use-prop-getters/index.html
+++ b/12-use-prop-getters/index.html
@@ -74,7 +74,6 @@ by Mauricio Allende (https://mallendeo.com/)
 </style>
 <script src="https://unpkg.com/react@16.0.0/umd/react.development.js"></script>
 <script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.development.js"></script>
-<script src="https://unpkg.com/prop-types@15.6.0/prop-types.js"></script>
 <script src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
 
 <div id="⚛️"></div>
@@ -82,103 +81,55 @@ by Mauricio Allende (https://mallendeo.com/)
 <script type="text/babel">
 const compose = (...fns) => (...args) =>
   fns.forEach(fn => fn && fn(...args))
-
 class Toggle extends React.Component {
-  static defaultProps = {
-    defaultOn: false,
-    onToggle: () => {},
-    onReset: () => {},
-  }
-  initialState = {on: this.props.defaultOn}
-  state = this.initialState
-  reset = () => {
-    if (this.isOnControlled()) {
-      this.props.onReset()
-    } else {
-      this.setState(this.initialState, () =>
-        this.props.onReset(this.state.on),
-      )
+  static defaultProps = {onToggle: () => {}}
+  state = {on: false}
+  toggle = () =>
+    this.setState(
+      ({on}) => ({on: !on}),
+      () => this.props.onToggle(this.state.on),
+    )
+  getTogglerProps = (
+    {onClick, ...props} = {},
+  ) => {
+    return {
+      'aria-expanded': this.state.on,
+      onClick: compose(onClick, this.toggle),
+      ...props,
     }
-  }
-  toggle = () => {
-    if (this.isOnControlled()) {
-      this.props.onToggle()
-    } else {
-      this.setState(
-        ({on}) => ({on: !on}),
-        () => this.props.onToggle(this.state.on),
-      )
-    }
-  }
-
-  getTogglerProps = ({
-    onClick,
-    ...remainingProps
-  }) => ({
-    onClick: compose(onClick, this.toggle),
-    'aria-expanded': this.state.on,
-    ...remainingProps,
-  })
-  isOnControlled() {
-    return this.props.on !== undefined
   }
   render() {
     return this.props.render({
-      on: this.isOnControlled()
-        ? this.props.on
-        : this.state.on,
-      getTogglerProps: this.getTogglerProps,
+      on: this.state.on,
       toggle: this.toggle,
-      reset: this.reset,
+      getTogglerProps: this.getTogglerProps,
     })
   }
 }
 
-class App extends React.Component {
-  initialState = {timesClicked: 0, on: false}
-  state = this.initialState
-  handleToggle = () => {
-    this.setState(({timesClicked, on}) => ({
-      timesClicked: timesClicked + 1,
-      on: timesClicked >= 4 ? false : !on,
-    }))
-  }
-  handleReset = () => {
-    this.setState(this.initialState)
-  }
-
-  render() {
-    const {timesClicked, on} = this.state
-    return (
-      <Toggle
-        on={on}
-        onToggle={this.handleToggle}
-        onReset={this.handleReset}
-        render={toggle => (
-          <div>
-            <Switch
-              {...toggle.getTogglerProps({
-                on: toggle.on,
-              })}
-            />
-            {timesClicked > 4 ? (
-              <div>
-                Whoa, you've clicked too much!
-                <br />
-                <button onClick={toggle.reset}>
-                  reset
-                </button>
-              </div>
-            ) : timesClicked > 0 ? (
-              <div>
-                Click count: {timesClicked}
-              </div>
-            ) : null}
-          </div>
-        )}
-      />
-    )
-  }
+function App() {
+  return (
+    <Toggle
+      onToggle={on => console.log('toggle', on)}
+      render={({on, toggle, getTogglerProps}) => (
+        <div>
+          <Switch
+            on={on}
+            {...getTogglerProps()}
+          />
+          <hr />
+          <button
+            {...getTogglerProps({
+              onClick: () => alert('hi'),
+              id: 'hi',
+            })}
+          >
+            {on ? 'on' : 'off'}
+          </button>
+        </div>
+      )}
+    />
+  )
 }
 
 /*
