--- a/15-implement-a-provider-with-render-props/index.html
+++ b/15-implement-a-provider-with-render-props/index.html
@@ -76,8 +76,6 @@ by Mauricio Allende (https://mallendeo.com/)
 <script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.development.js"></script>
 <script src="https://unpkg.com/prop-types@15.6.0/prop-types.js"></script>
 <script src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
-<script src="https://unpkg.com/react-broadcast@0.5.2/umd/react-broadcast.js"></script>
-<script src="https://cdn.rawgit.com/kentcdodds/ea2fdfc82f79228a6be641c78dc0e1b9/raw/0f792eb8dfb3bf993bdf50c9656f12090ed344e6/hoist-non-react-statics.umd.js"></script>
 
 <div id="⚛️"></div>
 
@@ -113,13 +111,12 @@ class Toggle extends React.Component {
     }
   }
 
-  getTogglerProps = ({
-    onClick,
-    ...remainingProps
-  }) => ({
+  getTogglerProps = (
+    {onClick, ...props} = {},
+  ) => ({
     onClick: compose(onClick, this.toggle),
     'aria-expanded': this.state.on,
-    ...remainingProps,
+    ...props,
   })
   isOnControlled() {
     return this.props.on !== undefined
@@ -137,7 +134,22 @@ class Toggle extends React.Component {
 }
 
 class ToggleProvider extends React.Component {
-  static channel = '__toggle_channel__'
+  static contextName = '__toggle__'
+  static Renderer = class extends React.Component {
+    static childContextTypes = {
+      [ToggleProvider.contextName]:
+        PropTypes.object.isRequired,
+    }
+    getChildContext() {
+      return {
+        [ToggleProvider.contextName]: this.props
+          .toggle,
+      }
+    }
+    render() {
+      return this.props.children
+    }
+  }
   render() {
     const {
       children,
@@ -147,12 +159,10 @@ class ToggleProvider extends React.Component {
       <Toggle
         {...remainingProps}
         render={toggle => (
-          <ReactBroadcast.Broadcast
-            channel={ToggleProvider.channel}
-            value={toggle}
-          >
-            {children}
-          </ReactBroadcast.Broadcast>
+          <ToggleProvider.Renderer
+            toggle={toggle}
+            children={children}
+          />
         )}
       />
     )
@@ -160,62 +170,41 @@ class ToggleProvider extends React.Component {
 }
 
 function ToggleController(props, context) {
-  return (
-    <ReactBroadcast.Subscriber
-      channel={ToggleProvider.channel}
-    >
-      {toggle => props.render(toggle)}
-    </ReactBroadcast.Subscriber>
+  return props.render(
+    context[ToggleProvider.contextName],
   )
 }
-
-function withToggle(Component) {
-  function Wrapper(props, context) {
-    const {innerRef, ...remainingProps} = props
-    return (
-      <ToggleController
-        render={toggle => (
-          <Component
-            {...remainingProps}
-            toggle={toggle}
-            ref={innerRef}
-          />
-        )}
-      />
-    )
-  }
-
-  Wrapper.displayName = `withToggle(${Component.displayName ||
-    Component.name})`
-  Wrapper.propTypes = {innerRef: PropTypes.func}
-  Wrapper.WrappedComponent = Component
-
-  return hoistNonReactStatics(Wrapper, Component)
+ToggleController.contextTypes = {
+  [ToggleProvider.contextName]:
+    PropTypes.object.isRequired,
 }
 
-class UpdateBlocker extends React.Component {
-  shouldComponentUpdate() {
-    return false
-  }
-  render() {
-    return this.props.children
-  }
+function ShowMore({number}) {
+  return (
+    <ToggleController
+      render={toggle => (
+        <div>
+          Switch {number}
+          <Switch
+            {...toggle.getTogglerProps({
+              on: toggle.on,
+            })}
+          />
+          {toggle.on ? (
+            <ToggleProvider>
+              <ShowMore number={number + 1} />
+            </ToggleProvider>
+          ) : null}
+        </div>
+      )}
+    />
+  )
 }
 
 function App() {
   return (
-    <ToggleProvider>
-      <UpdateBlocker>
-        <ToggleController
-          render={toggle => (
-            <Switch
-              {...toggle.getTogglerProps({
-                on: toggle.on,
-              })}
-            />
-          )}
-        />
-      </UpdateBlocker>
+    <ToggleProvider defaultOn={true}>
+      <ShowMore number={0} />
     </ToggleProvider>
   )
 }
