--- a/15-implement-a-provider-with-render-props/index.html
+++ b/15-implement-a-provider-with-render-props/index.html
@@ -93,7 +93,7 @@ class Toggle extends React.Component {
   state = this.initialState
   reset = () => {
     if (this.isOnControlled()) {
-      this.props.onReset()
+      this.props.onReset(!this.props.on)
     } else {
       this.setState(this.initialState, () =>
         this.props.onReset(this.state.on),
@@ -102,7 +102,7 @@ class Toggle extends React.Component {
   }
   toggle = () => {
     if (this.isOnControlled()) {
-      this.props.onToggle()
+      this.props.onToggle(!this.props.on)
     } else {
       this.setState(
         ({on}) => ({on: !on}),
@@ -110,7 +110,6 @@ class Toggle extends React.Component {
       )
     }
   }
-
   getTogglerProps = (
     {onClick, ...props} = {},
   ) => ({
@@ -126,9 +125,9 @@ class Toggle extends React.Component {
       on: this.isOnControlled()
         ? this.props.on
         : this.state.on,
-      getTogglerProps: this.getTogglerProps,
       toggle: this.toggle,
       reset: this.reset,
+      getTogglerProps: this.getTogglerProps,
     })
   }
 }
@@ -169,42 +168,156 @@ class ToggleProvider extends React.Component {
   }
 }
 
-function ToggleController(props, context) {
+function ConnectedToggle(props, context) {
   return props.render(
     context[ToggleProvider.contextName],
   )
 }
-ToggleController.contextTypes = {
+ConnectedToggle.contextTypes = {
   [ToggleProvider.contextName]:
     PropTypes.object.isRequired,
 }
 
-function ShowMore({number}) {
+function Nav() {
   return (
-    <ToggleController
-      render={toggle => (
-        <div>
-          Switch {number}
-          <Switch
-            {...toggle.getTogglerProps({
-              on: toggle.on,
-            })}
-          />
-          {toggle.on ? (
-            <ToggleProvider>
-              <ShowMore number={number + 1} />
-            </ToggleProvider>
-          ) : null}
+    <ConnectedToggle
+      render={({on}) => (
+        <nav style={{flex: 1}}>
+          <ul
+            style={{
+              display: 'flex',
+              justifyContent: 'space-around',
+              listStyle: 'none',
+              paddingLeft: '0',
+            }}
+          >
+            <li>
+              <a href="index.html">
+                {on ? '🏡' : 'Home'}
+              </a>
+            </li>
+            <li>
+              <a href="/about/">
+                {on ? '❓' : 'About'}
+              </a>
+            </li>
+            <li>
+              <a href="/blog/">
+                {on ? '📖' : 'Blog'}
+              </a>
+            </li>
+          </ul>
+        </nav>
+      )}
+    />
+  )
+}
+
+function NavSwitch() {
+  return (
+    <ConnectedToggle
+      render={({getTogglerProps, on}) => (
+        <div
+          style={{
+            display: 'flex',
+            flexDirection: 'column',
+            justifyContent: 'center',
+            textAlign: 'center',
+          }}
+        >
+          <div>{on ? '🦄' : 'Enable Emoji'}</div>
+          <Switch {...getTogglerProps({on})} />
         </div>
       )}
     />
   )
 }
 
+function Header() {
+  return (
+    <div>
+      <div
+        style={{
+          display: 'flex',
+          justifyContent: 'space-around',
+          alignItems: 'center',
+        }}
+      >
+        <Nav />
+        <NavSwitch />
+      </div>
+    </div>
+  )
+}
+
+function Subtitle() {
+  return (
+    <ConnectedToggle
+      render={({on}) =>
+        on
+          ? '👩‍🏫 👉 🕶'
+          : 'Teachers are awesome'}
+    />
+  )
+}
+
+function Title() {
+  return (
+    <div>
+      <h1>
+        Who is{' '}
+        <ConnectedToggle
+          render={({on}) =>
+            on ? '🕶❓' : 'awesome?'}
+        />
+      </h1>
+      <Subtitle />
+    </div>
+  )
+}
+
+function Article() {
+  return (
+    <div>
+      <ConnectedToggle
+        render={({on}) =>
+          [
+            'Once, I was in',
+            on ? '🏫‍' : 'school',
+            'when I',
+            on ? '🤔' : 'realized',
+            'something...',
+          ].join(' ')}
+      />
+      <hr />
+      <ConnectedToggle
+        render={({on}) =>
+          [
+            'Without',
+            on ? '👩‍🏫' : 'teachers',
+            `I wouldn't know anything so`,
+            on ? '🙏' : 'thanks',
+            on ? '👩‍🏫❗️' : 'teachers!',
+          ].join(' ')}
+      />
+    </div>
+  )
+}
+
+function Post({title, subtitle, contents}) {
+  return (
+    <div>
+      <Title />
+      <Article />
+    </div>
+  )
+}
+
 function App() {
   return (
     <ToggleProvider defaultOn={true}>
-      <ShowMore number={0} />
+      <Header />
+      <Post />
     </ToggleProvider>
   )
 }
@@ -236,17 +349,7 @@ function Switch({on, className = '', ...props}) {
 }
 
 ReactDOM.render(
-  <div
-    style={{
-      marginTop: 40,
-      display: 'flex',
-      justifyContent: 'center',
-      flexDirection: 'column',
-      textAlign: 'center',
-    }}
-  >
-    <App />
-  </div>,
+  <App />,
   document.getElementById('⚛️'),
 )
 </script>
