--- a/15-implement-a-provider-with-render-props/index.html
+++ b/15-implement-a-provider-with-render-props/index.html
@@ -181,7 +181,7 @@ ConnectedToggle.contextTypes = {
 function Nav() {
   return (
     <ConnectedToggle
-      render={({on}) => (
+      render={toggle => (
         <nav style={{flex: 1}}>
           <ul
             style={{
@@ -193,17 +193,17 @@ function Nav() {
           >
             <li>
               <a href="index.html">
-                {on ? '🏡' : 'Home'}
+                {toggle.on ? '🏡' : 'Home'}
               </a>
             </li>
             <li>
               <a href="/about/">
-                {on ? '❓' : 'About'}
+                {toggle.on ? '❓' : 'About'}
               </a>
             </li>
             <li>
               <a href="/blog/">
-                {on ? '📖' : 'Blog'}
+                {toggle.on ? '📖' : 'Blog'}
               </a>
             </li>
           </ul>
@@ -215,21 +215,30 @@ function Nav() {
 
 function NavSwitch() {
   return (
-    <ConnectedToggle
-      render={({getTogglerProps, on}) => (
-        <div
-          style={{
-            display: 'flex',
-            flexDirection: 'column',
-            justifyContent: 'center',
-            textAlign: 'center',
-          }}
-        >
-          <div>{on ? '🦄' : 'Enable Emoji'}</div>
-          <Switch {...getTogglerProps({on})} />
-        </div>
-      )}
-    />
+    <div
+      style={{
+        display: 'flex',
+        flexDirection: 'column',
+        justifyContent: 'center',
+        textAlign: 'center',
+      }}
+    >
+      <div>
+        <ConnectedToggle
+          render={toggle =>
+            toggle.on ? '🦄' : 'Enable Emoji'}
+        />
+      </div>
+      <ConnectedToggle
+        render={toggle => (
+          <Switch
+            {...toggle.getTogglerProps({
+              on: toggle.on,
+            })}
+          />
+        )}
+      />
+    </div>
   )
 }
 
@@ -253,8 +262,8 @@ function Header() {
 function Subtitle() {
   return (
     <ConnectedToggle
-      render={({on}) =>
-        on
+      render={toggle =>
+        toggle.on
           ? '👩‍🏫 👉 🕶'
           : 'Teachers are awesome'}
     />
@@ -265,10 +274,11 @@ function Title() {
   return (
     <div>
       <h1>
-        Who is{' '}
         <ConnectedToggle
-          render={({on}) =>
-            on ? '🕶❓' : 'awesome?'}
+          render={toggle =>
+            `Who is ${toggle.on
+              ? '🕶❓'
+              : 'awesome?'}`}
         />
       </h1>
       <Subtitle />
@@ -280,31 +290,31 @@ function Article() {
   return (
     <div>
       <ConnectedToggle
-        render={({on}) =>
+        render={toggle =>
           [
             'Once, I was in',
-            on ? '🏫‍' : 'school',
+            toggle.on ? '🏫‍' : 'school',
             'when I',
-            on ? '🤔' : 'realized',
+            toggle.on ? '🤔' : 'realized',
             'something...',
           ].join(' ')}
       />
       <hr />
       <ConnectedToggle
-        render={({on}) =>
+        render={toggle =>
           [
             'Without',
-            on ? '👩‍🏫' : 'teachers',
+            toggle.on ? '👩‍🏫' : 'teachers',
             `I wouldn't know anything so`,
-            on ? '🙏' : 'thanks',
-            on ? '👩‍🏫❗️' : 'teachers!',
+            toggle.on ? '🙏' : 'thanks',
+            toggle.on ? '👩‍🏫❗️' : 'teachers!',
           ].join(' ')}
       />
     </div>
   )
 }
 
-function Post({title, subtitle, contents}) {
+function Post() {
   return (
     <div>
       <Title />
@@ -315,9 +325,11 @@ function Post({title, subtitle, contents}) {
 
 function App() {
   return (
-    <ToggleProvider defaultOn={true}>
-      <Header />
-      <Post />
+    <ToggleProvider>
+      <div>
+        <Header />
+        <Post />
+      </div>
     </ToggleProvider>
   )
 }
