--- a/17-rerender-descendants-through-shouldcomponentupdate/index.html
+++ b/17-rerender-descendants-through-shouldcomponentupdate/index.html
@@ -158,7 +158,7 @@ class ToggleProvider extends React.Component {
   }
 }
 
-function ToggleController(props, context) {
+function ConnectedToggle(props, context) {
   return (
     <ReactBroadcast.Subscriber
       channel={ToggleProvider.channel}
@@ -172,7 +172,7 @@ function withToggle(Component) {
   function Wrapper(props, context) {
     const {innerRef, ...remainingProps} = props
     return (
-      <ToggleController
+      <ConnectedToggle
         render={toggle => (
           <Component
             {...remainingProps}
@@ -205,15 +205,10 @@ function App() {
   return (
     <ToggleProvider>
       <UpdateBlocker>
-        <ToggleController
-          render={toggle => (
-            <Switch
-              {...toggle.getTogglerProps({
-                on: toggle.on,
-              })}
-            />
-          )}
-        />
+        <div>
+          <Header />
+          <Post />
+        </div>
       </UpdateBlocker>
     </ToggleProvider>
   )
@@ -227,6 +222,151 @@ function App() {
  *
  *
  */
+
+function Nav() {
+  return (
+    <ConnectedToggle
+      render={toggle => (
+        <nav style={{flex: 1}}>
+          <ul
+            style={{
+              display: 'flex',
+              justifyContent: 'space-around',
+              listStyle: 'none',
+              paddingLeft: '0',
+            }}
+          >
+            <li>
+              <a href="index.html">
+                {toggle.on ? '🏡' : 'Home'}
+              </a>
+            </li>
+            <li>
+              <a href="/about/">
+                {toggle.on ? '❓' : 'About'}
+              </a>
+            </li>
+            <li>
+              <a href="/blog/">
+                {toggle.on ? '📖' : 'Blog'}
+              </a>
+            </li>
+          </ul>
+        </nav>
+      )}
+    />
+  )
+}
+
+function NavSwitch() {
+  return (
+    <div
+      style={{
+        display: 'flex',
+        flexDirection: 'column',
+        justifyContent: 'center',
+        textAlign: 'center',
+      }}
+    >
+      <div>
+        <ConnectedToggle
+          render={toggle =>
+            toggle.on ? '🦄' : 'Enable Emoji'}
+        />
+      </div>
+      <ConnectedToggle
+        render={toggle => (
+          <Switch
+            {...toggle.getTogglerProps({
+              on: toggle.on,
+            })}
+          />
+        )}
+      />
+    </div>
+  )
+}
+
+function Header() {
+  return (
+    <div>
+      <div
+        style={{
+          display: 'flex',
+          justifyContent: 'space-around',
+          alignItems: 'center',
+        }}
+      >
+        <Nav />
+        <NavSwitch />
+      </div>
+    </div>
+  )
+}
+
+function Subtitle() {
+  return (
+    <ConnectedToggle
+      render={toggle =>
+        toggle.on
+          ? '👩‍🏫 👉 🕶'
+          : 'Teachers are awesome'}
+    />
+  )
+}
+
+function Title() {
+  return (
+    <div>
+      <h1>
+        <ConnectedToggle
+          render={toggle =>
+            `Who is ${toggle.on
+              ? '🕶❓'
+              : 'awesome?'}`}
+        />
+      </h1>
+      <Subtitle />
+    </div>
+  )
+}
+
+function Article() {
+  return (
+    <div>
+      <ConnectedToggle
+        render={toggle =>
+          [
+            'Once, I was in',
+            toggle.on ? '🏫‍' : 'school',
+            'when I',
+            toggle.on ? '🤔' : 'realized',
+            'something...',
+          ].join(' ')}
+      />
+      <hr />
+      <ConnectedToggle
+        render={toggle =>
+          [
+            'Without',
+            toggle.on ? '👩‍🏫' : 'teachers',
+            `I wouldn't know anything so`,
+            toggle.on ? '🙏' : 'thanks',
+            toggle.on ? '👩‍🏫❗️' : 'teachers!',
+          ].join(' ')}
+      />
+    </div>
+  )
+}
+
+function Post() {
+  return (
+    <div>
+      <Title />
+      <Article />
+    </div>
+  )
+}
 
 function Switch({on, className = '', ...props}) {
   return (
